// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional body 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <div>Demo</div><script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`additional head 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    </head>
    <body>
      <script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom async template 1`] = `"<div>Pizza</div>"`;

exports[`custom attributes 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"main.js\\" defer></script>
    </body>
  </html>"
`;

exports[`custom chunks 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"index.js\\"></script>
    </body>
  </html>"
`;

exports[`custom chunks 2`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"another.js\\"></script>
    </body>
  </html>"
`;

exports[`custom filename 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom lang 1`] = `
"<!DOCTYPE html>
  <html lang=\\"ru\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom publicPath 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"pizza/main.js\\"></script>
    </body>
  </html>"
`;

exports[`custom template 1`] = `"<div>Pizza</div>"`;

exports[`custom title 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title>Pizza</title>
      
    </head>
    <body>
      <script src=\\"main.js\\"></script>
    </body>
  </html>"
`;

exports[`default options 1`] = `
"<!DOCTYPE html>
  <html lang=\\"en\\">
    <head>
      <meta charset=\\"UTF-8\\">
      <title></title>
      
    </head>
    <body>
      <script src=\\"main.js\\"></script>
    </body>
  </html>"
`;
